changes to the home page to make it more clean + the rules.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>tbdl</title>
     <link rel="stylesheet" href="styles.css">
 <body>
-    <h1>tbdl hang out spot 👋</h1>
-    <a class="bn49" href="rules.html">discord</a>
+    <h1>TBDL Hangout Spot</h1>
+    <div class="btn-container">
+    <a class="btn learn-more" href="rules.html">Rules</a>
+    <a class="btn discordbtn" href="https://discord.gg/tbdl">Discord</a>
+    </div>
 </body>
 </html>
