--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <a class="btn learn-more" href="rules.html">Rules</a>
     <a class="btn discordbtn" href="https://discord.gg/tbdl">Discord</a>
     </div>
+
+    <div class="footer">Join the <strong><a href="discord.gg/tbdl" class="boldserver">server</a></strong>.</div>
 </body>
 </html>
